--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 								</style>
 
 							<header>
-								<h2 class="alt">Hi,  I'm <strong>Onkar</strong>.<br />
+								<h2 class="alt">Hi,  I'm <strong>Onkar Kandar</strong>.<br />
 								An Aspiring Data Scientist</a>.</h2>
 								<p><strong>I am Data Science and Machine Learning Enthusiast
 								    Skilled in Python. MySQL. Tableau.</strong></p>
